55959: [T][I1][Extra] - Issues after testing on iPhone SE under Safari browser

--- a/app/design/frontend/Fecon/theme/web/css/source/responsive/_header.less
+++ b/app/design/frontend/Fecon/theme/web/css/source/responsive/_header.less
@@ -305,6 +305,9 @@
                                         color: @color-white !important;
                                     }
                                 }
+                                li.authorization-link {
+                                    text-transform: uppercase;
+                                }
                                 li:last-child:not(.toplink) {
                                     display: none;
                                 }
