--- a/app/design/frontend/Fecon/theme/web/css/source/responsive/_product_page.less
+++ b/app/design/frontend/Fecon/theme/web/css/source/responsive/_product_page.less
@@ -398,7 +398,7 @@
                             }
                             .product-reviews-summary {
                                 .reviews-actions {
-                                    margin-left: -7px;
+                                    margin-left: 0px;
                                     a {
                                         margin-top: 15px;
                                     }
